# onec-config-mcp

./: .gitignore  LICENSE  README.md  config.example.json  db.py  indexer.py  parser.py  pyproject.toml  server.py  tools.py
