[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "onec-config-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "lxml>=5.0",
    "watchdog>=4.0",
]

[tool.setuptools]
py-modules = ["server", "indexer", "db", "parser", "tools"]

[project.scripts]
onec-mcp = "server:main"
onec-index = "indexer:main"
